@N Differenz in Einnahmen/Ausgaben anzeigen, Cleanup